# dsp_hw

./: README.md  pyproject.toml
code/: hw_2.py  hw_3.py
code/hw_1/: enhance_noise.py  restore_rec.py
data/hw_1/: .gitignore  record.wav.dvc  sweeper_gt.wav.dvc  sweeper_rec.wav.dvc  white_noise_gt.wav.dvc  white_noise_rec.wav.dvc
data/hw_2/: .gitignore  gt.wav.dvc  noise.wav.dvc
output/hw_2/: .~lock.dnsmos.csv#  NISQA_results.csv  dnsmos.csv  sample.csv
output/hw_2/nisqa_results/: NISQA_results.csv
output/hw_3/: .~lock.NISQA_results.csv#  NISQA_results.csv  dnsmos.csv
